Fix NS_ERROR_FAILURE in annotations by using visibility hidden instead of display none

--- a/react/src/App.css
+++ b/react/src/App.css
@@ -23,7 +23,7 @@ div#chart {
 }
 
 .hidden {
-  display: none;
+  visibility: hidden;
 }
 
 rect.annotation-note-bg {
